--- a/src/views/Home/styles/index.css
+++ b/src/views/Home/styles/index.css
@@ -10,5 +10,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 60px;
+  margin-top: 20px;
+}
+
+.home-box-render {
+  width: 100%;
+  max-width: 330px;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  border: solid 1px gray;;
+  border-radius: 6px;
 }
